fix: hide scrollbar globally

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,12 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 *,
